src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/CD4AC0019.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0019 {
  class A;
  class B;
  interface I;
  enum E;

  association assoc1 A [String] -> B;
  association assoc2 A [I]      -> B;
  association assoc3 A [E]      -> B;
}
